--- a/desarrollo/estilos/_layout.scss
+++ b/desarrollo/estilos/_layout.scss
@@ -38,8 +38,7 @@ a{
     margin:0 auto;
     width:74em;
     max-width:calc(100% - 4em);
-    transition: filter 0.25s ease;
-    
+    transition: filter 0.25s ease;    
 }
 
 .logo .logo-2{
@@ -140,13 +139,17 @@ a{
 }
 /*=======Cards===============*/
 
-.galeria{
+#tips{
     display:flex;
-    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    padding:5em 5em 3em 5em;
+    flex: 1 1 80%;
 }
 .escena{
-    padding:5em 5em 3em 5em;
-    width:20em;
+    padding:20px;
+    width:15em;
     height: 30em;
     perspective: 600px;
 }
@@ -158,12 +161,17 @@ a{
   cursor: pointer;
   transition: transform 1s;
   transform-style: preserve-3d;
+  flex:1 1 auto;
 }
 
 .card_face{
     position: absolute;
+    display:flex;
     height: 100%;
     width:100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     backface-visibility: hidden;
 }
 
@@ -388,7 +396,7 @@ footer.major {
     body{
         background: url(../images/Defiestafondoweb_01.jpg) no-repeat right fixed;
     }   
-    #intro, #locacion, #media {
+    #intro, #locacion, #media, #tips {
         padding: 2em 2em 0em 2em;
     }
     .logo img{
