--- a/produccion/css/styles.css
+++ b/produccion/css/styles.css
@@ -154,18 +154,26 @@ a {
   padding: 5em 5em 3em 5em; }
 
 /*=======Cards===============*/
-.galeria {
+#tips {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row; }
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding: 5em 5em 3em 5em;
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 80%;
+  flex: 1 1 80%; }
 
 .escena {
-  padding: 5em 5em 3em 5em;
-  width: 20em;
+  padding: 20px;
+  width: 15em;
   height: 30em;
   -webkit-perspective: 600px;
   perspective: 600px; }
@@ -181,12 +189,28 @@ a {
   transition: transform 1s;
   transition: transform 1s, -webkit-transform 1s;
   -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d; }
+  transform-style: preserve-3d;
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto; }
 
 .card_face {
   position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   height: 100%;
   width: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden; }
 
@@ -376,7 +400,7 @@ footer.major {
 @media screen and (max-width: 480px) {
   body {
     background: url(../images/Defiestafondoweb_01.jpg) no-repeat right fixed; }
-  #intro, #locacion, #media {
+  #intro, #locacion, #media, #tips {
     padding: 2em 2em 0em 2em; }
   .logo img {
     width: 250px; }
