--- a/desarrollo/estilos/_layout.scss
+++ b/desarrollo/estilos/_layout.scss
@@ -59,6 +59,29 @@ h2{
     width:400px;
 }
 
+.container-grid{
+    display:flex;
+
+}
+
+.row{
+    display:flex;
+    flex-direction:row;
+    flex-wrap:wrap;
+    width:100%;
+}
+
+.column{
+    display:flex;
+    flex-direction: column;
+    flex-basis:100%;
+    flex:1;
+}
+
+.texto{
+    flex-direction: row;
+    align-items: center;
+}
 #nav{
     width:74em;
     color:#636363;
@@ -92,7 +115,7 @@ h2{
     display: inline-block;
     height: 2.25em;
     line-height: 2.25em;
-    // padding: 0 1.25em;
+    padding: 0 1.25em;
     border: 0;
     border-radius: 8px;
 }
@@ -149,6 +172,21 @@ h2{
 .plano{
     width:100%;
 }
+
+.redes-hashtags{
+    display:flex;
+    padding:2em;
+    justify-content: center;
+    align-items: center;
+}
+
+.social{
+    background-color: #E9504C;
+    color:#fff;
+    border-radius: 10px;
+    padding:10px;
+    font-size:3em;
+}
 /*=======Cards===============*/
 
 #tips{
@@ -156,7 +194,7 @@ h2{
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    padding:5em 5em 3em 5em;
+    padding:2em 5em 3em 5em;
     flex: 1 1 80%;
 }
 .escena{
@@ -364,6 +402,11 @@ footer.major {
     margin-top: 3em;
 }
 
+.brands{
+    border-radius: 10px;
+    border: 2px solid #000;
+}
+
 .icon.brands:before {
    
 }
@@ -382,9 +425,9 @@ footer.major {
 }
 
 .fab{
-    border-radius: 10px;
-    border: 2px solid #000;
+    
 }
+
 /*==========================================*/
 
 @keyframes fadein{
@@ -448,6 +491,8 @@ h2{
     #main{
         font-size:16px;
     }
+    .social{
+            }
     .logo img{
         width:250px;
     }
