--- a/desarrollo/estilos/_layout.scss
+++ b/desarrollo/estilos/_layout.scss
@@ -74,6 +74,8 @@ h2{
 .column{
     display:flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     flex-basis:100%;
     flex:1;
 }
@@ -81,6 +83,7 @@ h2{
 .texto{
     flex-direction: row;
     align-items: center;
+    justify-content: center;
 }
 #nav{
     width:74em;
@@ -115,7 +118,7 @@ h2{
     display: inline-block;
     height: 2.25em;
     line-height: 2.25em;
-    padding: 0 1.25em;
+    padding: 0 1em;
     border: 0;
     border-radius: 8px;
 }
@@ -175,21 +178,38 @@ h2{
 
 .redes-hashtags{
     display:flex;
-    padding:2em;
+    flex-direction:row;
+    flex-flow:row wrap;
     justify-content: center;
     align-items: center;
+    padding:2em 0 0 0;
 }
 
 .social{
     background-color: #E9504C;
     color:#fff;
     border-radius: 10px;
+    justify-content: space-around;
     padding:10px;
-    font-size:3em;
+    font-size:1em;
+}
+
+.redes{
+    margin-right:50px; 
+    color:#E9504C;
+}
+
+.link-agenda{
+    text-align: center;
+}
+
+.link-agenda img{
+    width:50%;
+    height: 50%;
 }
 /*=======Cards===============*/
 
-#tips{
+#tips, #album{
     display:flex;
     justify-content: center;
     align-items: center;
@@ -197,10 +217,58 @@ h2{
     padding:2em 5em 3em 5em;
     flex: 1 1 80%;
 }
+
+.gallery{
+    column-count: 3;
+    column-gap: 10px;
+    margin-top:10px;
+    flex-direction: row;
+    overflow: hidden;
+}
+
+.gallery img{
+    width:100%;
+    height: auto;
+    
+    transition: 500ms;
+    margin-bottom: 10px;
+    opacity: 0.8;
+    page-break-inside: avoid;
+    break-inside:avoid;
+}
+
+.gallery img:hover{
+    opacity:1;
+}
+
+.modal-img,.model-vid{
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    display: table
+  }
+  .modal-body{
+    padding: 0px;
+  }
+
+.modal-dialog{
+    height: 100%;
+    position: relative;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal-content {
+    border: none;
+}
+
 .escena{
     padding:20px;
     width:15em;
-    height: 30em;
+    height: 20em;
     perspective: 600px;
 }
 
@@ -226,32 +294,32 @@ h2{
 }
 
 .card_face_front_1{
-    background:url('../images/front_1.jpg') no-repeat center center;
+    background:url('../images/frontal.jpg') no-repeat center center;
     background-size:contain;
 }
 
 .card_face_back_1{
-    background:url('../images/back_1.jpg') no-repeat center center;
+    background:url('../images/detras.jpg') no-repeat center center;
     background-size:contain;
     transform: rotateY(180deg);
 }
 .card_face_front_2{
-    background:url('../images/post01.jpg') no-repeat center center;
+    background:url('../images/frontal1.jpg') no-repeat center center;
     background-size:contain;
 }
 
 .card_face_back_2{
-    background:url('../images/post04.jpg') no-repeat center center;
+    background:url('../images/detras1.jpg') no-repeat center center;
     background-size:contain;
     transform: rotateY(180deg);
 }
 .card_face_front_3{
-    background:url('../images/post01.jpg') no-repeat center center;
+    background:url('../images/frontal2.jpg') no-repeat center center;
     background-size:contain;
 }
 
 .card_face_back_3{
-    background:url('../images/post04.jpg') no-repeat center center;
+    background:url('../images/detras2.jpg') no-repeat center center;
     background-size:contain;
     transform: rotateY(180deg);
 }
@@ -269,6 +337,29 @@ h2{
 .card.is-flipped{
     transform:rotateY(180deg);
 }
+
+#lightbox{
+    position:fixed;
+    z-index:1000;
+    top:0;
+    height: 100%;
+    background-color: rgba(0,0,0, .9);
+    display:none;
+}
+
+#lightbox.active {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  #lightbox img {
+    max-width: 90%;
+    max-height: 80%;
+    padding: 4px;
+    background-color: black;
+    border: 2px solid white;
+  }
 /*============================*/
 /*=======Footer===============*/
 
@@ -425,7 +516,7 @@ footer.major {
 }
 
 .fab{
-    
+    ;
 }
 
 /*==========================================*/
@@ -473,6 +564,13 @@ footer.major {
     #footer {
         padding: 3em 2em 1em 2em ;
     }
+    .gallery{
+        column-count: 2;
+    }
+    .gallery div{
+        margin:0;
+        width:200px;
+    }
 
 }
 
@@ -492,7 +590,11 @@ h2{
         font-size:16px;
     }
     .social{
+        padding:6px;
             }
+    .redes{
+        margin-right: 10px;
+    }
     .logo img{
         width:250px;
     }
@@ -505,8 +607,20 @@ h2{
     #footer {
         padding: 2.5em 1em 0.5em 1em ;
     }
-
-
+    .fab{
+        font-size:15px;
+    }
+    .link-agenda img{
+        width:100%;
+        height: 100%;
+    }
+    .gallery{
+        column-count:1;
+    }
+    .gallery div{
+        margin:0;
+        width:200px;
+    }
 }
 
 @media screen and (max-width: 480px) {
