--- a/produccion/styles.css
+++ b/produccion/styles.css
@@ -244,15 +244,12 @@ h2 {
   margin-right: 50px;
   color: #E9504C; }
 
-.link-agenda {
-  text-align: center; }
-
 .link-agenda img {
-  width: 50%;
-  height: 50%; }
+  width: 100%;
+  height: 100%; }
 
 /*=======Cards===============*/
-#tips, #album {
+#tips {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -268,60 +265,6 @@ h2 {
   -webkit-box-flex: 1;
   -ms-flex: 1 1 80%;
   flex: 1 1 80%; }
-
-.gallery {
-  -webkit-column-count: 3;
-  column-count: 3;
-  -webkit-column-gap: 10px;
-  column-gap: 10px;
-  margin-top: 10px;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  overflow: hidden; }
-
-.gallery img {
-  width: 100%;
-  height: auto;
-  -webkit-transition: 500ms;
-  -o-transition: 500ms;
-  transition: 500ms;
-  margin-bottom: 10px;
-  opacity: 0.8;
-  page-break-inside: avoid;
-  -webkit-column-break-inside: avoid;
-  break-inside: avoid; }
-
-.gallery img:hover {
-  opacity: 1; }
-
-.modal-img, .model-vid {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  display: table; }
-
-.modal-body {
-  padding: 0px; }
-
-.modal-dialog {
-  height: 100%;
-  position: relative;
-  margin: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center; }
-
-.modal-content {
-  border: none; }
 
 .escena {
   padding: 20px;
@@ -603,13 +546,7 @@ footer.major {
 
 @media screen and (max-width: 736px) {
   #footer {
-    padding: 3em 2em 1em 2em; }
-  .gallery {
-    -webkit-column-count: 2;
-    column-count: 2; }
-  .gallery div {
-    margin: 0;
-    width: 200px; } }
+    padding: 3em 2em 1em 2em; } }
 
 @media screen and (max-width: 480px) {
   body {
@@ -633,15 +570,6 @@ footer.major {
   #footer {
     padding: 2.5em 1em 0.5em 1em; }
   .fab {
-    font-size: 15px; }
-  .link-agenda img {
-    width: 100%;
-    height: 100%; }
-  .gallery {
-    -webkit-column-count: 1;
-    column-count: 1; }
-  .gallery div {
-    margin: 0;
-    width: 200px; } }
+    font-size: 15px; } }
 
 /*==========================================*/
