--- a/desarrollo/estilos/_layout.scss
+++ b/desarrollo/estilos/_layout.scss
@@ -61,7 +61,6 @@ h2{
 
 .container-grid{
     display:flex;
-
 }
 
 .row{
@@ -209,7 +208,7 @@ h2{
 }
 /*=======Cards===============*/
 
-#tips, #album{
+#tips{
     display:flex;
     justify-content: center;
     align-items: center;
@@ -218,52 +217,46 @@ h2{
     flex: 1 1 80%;
 }
 
-.gallery{
-    column-count: 3;
-    column-gap: 10px;
-    margin-top:10px;
-    flex-direction: row;
-    overflow: hidden;
-}
-
-.gallery img{
-    width:100%;
-    height: auto;
-    
-    transition: 500ms;
-    margin-bottom: 10px;
-    opacity: 0.8;
-    page-break-inside: avoid;
-    break-inside:avoid;
-}
-
-.gallery img:hover{
-    opacity:1;
-}
-
-.modal-img,.model-vid{
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    display: table
-  }
-  .modal-body{
-    padding: 0px;
-  }
-
-.modal-dialog{
-    height: 100%;
-    position: relative;
-    margin: auto;
-    display: flex;
-    align-items: center;
+#album{
     justify-content: center;
+    padding:2em 5em 3em 5em;
+    text-align:center;
 }
 
-.modal-content {
-    border: none;
-}
+/*=========GALLERY=================*/
+.container {
+    width: 60%;
+    margin: 2rem auto; 
+  }
+  
+  .fila{
+      display:flex;
+  }
+
+  .columna{
+      flex:50%;
+      padding:10px;
+      
+  }
+
+  .single-image{
+      width: 100%;;
+  }
+
+  .flex-grid{
+      display: flex;
+      align-items: center;
+  }
+
+  .flex-grid-thirds .col {
+    width: 32%;
+  }
+
+  .flex-grid-thirds .col a{
+    width:95%; 
+    height:95%;
+  }
+/*=================================*/
 
 .escena{
     padding:20px;
@@ -360,6 +353,8 @@ h2{
     background-color: black;
     border: 2px solid white;
   }
+
+  
 /*============================*/
 /*=======Footer===============*/
 
@@ -515,10 +510,6 @@ footer.major {
     line-height: 2em;
 }
 
-.fab{
-    ;
-}
-
 /*==========================================*/
 
 @keyframes fadein{
@@ -571,6 +562,9 @@ footer.major {
         margin:0;
         width:200px;
     }
+    .columna{
+        flex:100%;
+    }
 
 }
 
@@ -620,6 +614,9 @@ h2{
     .gallery div{
         margin:0;
         width:200px;
+    }
+    .flex-grid{
+        display:block;
     }
 }
 
